# mygui

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  ChangeLog.md  ChangeLog.txt  ChangeLog_eng.txt  ChangeLog_rus.txt  Makefile.am  MyGUI.pc.in  MyGUI_RenderBox.cpp  MyGUI_RenderBox.h  MyGUI_v7.sln  MyGUI_v8.sln  README.md  Readme.txt  TODO.txt  bootstrap  configure.ac
Common/: BaseLayout.cpp  BaseLayout.h  CMakeLists.txt  MyGUIFramework.list  precompiled.h
Common/Base/: BaseDemoManager.h  BaseManager.cpp  BaseManager.h  BaseResource.rc  InputFocusInfo.h  Main.cpp  Main.h  StatisticInfo.h
Common/BaseLayout/: Attribute.h  BaseLayout.cpp  BaseLayout.h  WrapsAttribute.h
Common/FileSystemInfo/: FileSystemInfo.h
Common/Input/: InputConverter.h
Common/ItemBox/: BaseCellView.h  BaseItemBox.h  ItemDropInfo.h
Common/MessageBox/: MessageBox.cpp  MessageBox.h  MessageBoxStyle.h
Common/PanelView/: BasePanelView.h  BasePanelViewCell.cpp  BasePanelViewCell.h  BasePanelViewItem.h  PanelBase.h  PanelCell.cpp  PanelCell.h  PanelView.cpp  PanelView.h  PanelViewWindow.cpp  PanelViewWindow.h
Common/RenderBox/: RenderBoxWrap.cpp  RenderBoxWrap.h
Common/SystemInfo/: GetSystemInfo.h
Common/Tools/: Dialog.h  OpenSaveFileDialog.cpp  OpenSaveFileDialog.h
Demos/: CMakeLists.txt  Makefile.am
Demos/Demo_Colour/: ColourPanel.cpp  ColourPanel.h  DemoKeeper.cpp  DemoKeeper.h  Demo_Colour.list  Demo_Colour_v8.vcproj  EditPanel.cpp  EditPanel.h  Main.cpp  Makefile.am
Demos/Demo_Console/: BasisManager.cpp  Console.cpp  Console.h  DemoKeeper.cpp  DemoKeeper.h  Demo_Console.list  Demo_Console_v7.vcproj  Demo_Console_v8.vcproj  Makefile.am
Demos/Demo_Controllers/: DemoKeeper.cpp  DemoKeeper.h  Demo_Controllers.list  Demo_Controllers_v8.vcproj  Makefile.am  Menu1.cpp  Menu1.h  State.cpp  State.h
Demos/Demo_Font/: BasisManager.cpp  CMakeLists.txt  DemoKeeper.cpp  DemoKeeper.h  Demo_Font.list  Demo_Font_v8.vcproj  FontPanel.cpp  FontPanel.h  FontView.cpp  FontView.h  Makefile.am  TextureView.cpp  TextureView.h
Demos/Demo_Gui/: ColourWindow.cpp  ColourWindow.h  ColourWindowBox.cpp  ColourWindowBox.h  ColourWindowCellData.h  ColourWindowCellView.cpp  ColourWindowCellView.h  DemoKeeper.cpp  DemoKeeper.h  Demo_Gui.list  Demo_Gui_v8.vcproj  EditorWindow.cpp  EditorWindow.h  InformationWindow.cpp  InformationWindow.h  ItemBoxWindow.h  MainPanel.cpp  MainPanel.h  Makefile.am
Demos/Demo_ItemBox/: BaseCellView.h  BaseItemBox.cpp  BaseItemBox.h  CellView.cpp  CellView.h  DemoKeeper.cpp  DemoKeeper.h  Demo_ItemBox.list  Demo_ItemBox_v8.vcproj  ItemBox.cpp  ItemBox.h  ItemBoxH.cpp  ItemBoxH.h  ItemBoxV.cpp  ItemBoxV.h  ItemBoxWindow.cpp  ItemBoxWindow.h  ItemData.h  ItemDropInfo.h  Makefile.am  ResourceItemInfo.cpp  ResourceItemInfo.h  ToolTip.cpp  ToolTip.h  resource.h
Demos/Demo_ItemBox_Info/: CMakeLists.txt  DemoKeeper.cpp  DemoKeeper.h
Demos/Demo_MsdfFont/: CMakeLists.txt  DemoKeeper.cpp  DemoKeeper.h
Demos/Demo_PanelView/: DemoKeeper.cpp  DemoKeeper.h  Demo_PanelView.list  Demo_PanelView_v7.vcproj  Demo_PanelView_v8.vcproj  Makefile.am  Panel.h  PanelCell.cpp  PanelDirector.cpp  PanelDirector.h  PanelDynamic.cpp  PanelDynamic.h  PanelStatic.cpp  PanelStatic.h  PanelStaticLayout.h  PanelVew.cpp  PanelView.h  PanelViewCell.cpp  PanelViewCell.h  PanelViewWindow.cpp  PanelViewWindow.h
Demos/Demo_Peeking/: DemoKeeper.cpp  Demo_Peeking_v8.vcproj
Demos/Demo_Picking/: DemoKeeper.cpp  DemoKeeper.h  Demo_Picking.list  Demo_Picking_v7.vcproj  Demo_Picking_v8.vcproj  Makefile.am
Demos/Demo_PluginBerkeliumWidget/: BerkeliumBrowser.cpp  BerkeliumBrowser.h  CMakeLists.txt  DemoKeeper.cpp  DemoKeeper.h  Demo_PluginBerkeliumWidget.list
Demos/Demo_PluginStrangeButton/: CMakeLists.txt  DemoKeeper.cpp  DemoKeeper.h  Demo_PluginStrangeButton.list  Demo_PluginStrangeButton_v7.vcproj  Demo_PluginStrangeButton_v8.vcproj  Main.cpp  Makefile.am
Demos/Demo_ScrollView/: Global.h  (+8 more)
LayoutEditor/: BasisManager.cpp  BasisManager.h  BasisState.h  EditorState.cpp  EditorState.h  EditorToolTip.cpp  EditorToolTip.h  InputManager.cpp  InputManager.h  LayoutEditor.cbp  LayoutEditor.vcproj  LayoutEditor_v7.vcproj  LayoutEditor_v8.vcproj  Makefile.am  PanelItems.cpp  PanelItems.h  PanelMainProperties.cpp  PanelMainProperties.h  PanelProperties.cpp  PanelProperties.h  PanelUserData.cpp  PanelUserData.h  Parse.cpp  Parse.h  PropertiesPanelView.cpp  PropertiesPanelView.h  Readme.txt  SettingsWindow.cpp  SettingsWindow.h  Types.h  UndoManager.cpp  UndoManager.h  WidgetContainer.cpp  WidgetContainer.h  WidgetTypes.cpp  WidgetTypes.h  WidgetsWindow.cpp  WidgetsWindow.h
Media/: CMakeLists.txt  Mix.layout  MyGUI_logo_devoloper.psd  MyGUI_logo_expert.psd  MyGUI_logo_user.psd  NodeSimple.layout  acmesa.fontdef  anim1.xml  anim2.xml  test_meta_forms_1.xml  wallpaper.material
MyGUIEngine/: CMakeLists.txt  MyGUIEngine.cbp  MyGUIEngine.list  MyGUIEngine_linux.cbp  MyGUIEngine_v7.vcproj  MyGUIEngine_v8.vcproj
Plugins/: CMakeLists.txt
TestApp/: AbilityObject.h  AnimatebleObject.h  AnimationFactory.cpp  AnimationFactory.h  AnimationGraph.h  BasisManager.cpp  BasisManager.h  BasisState.h  Delegate.h  DelegateImplement.h  DemoKeeper.cpp  DemoKeeper.h  FadeController.h  IAnimationController.h  IBase.h  KinematicalObject.h  LoopController.h  Main.cpp  Makefile.am  MyGUI_Align.cpp  MyGUI_Align.h  OptionsState.cpp  OptionsState.h  RandomController5.h  RenderableObject.h  SkeletonState.h  SoundState.h  StatisticInfo.h  TestApp.cbp  TestApp.rc  TestApp.vcproj  TestApp_v7.vcproj  TestApp_v8.vcproj  TimeContext.h  resource.h
UnitTests/: CMakeLists.txt
Wrappers/: CMakeLists.txt  DoxygenWrapper.sln  MogreApp.sln  MogreFramework.sln  MyGUI_Export.sln  MyGUI_Managed.sln  MyGUI_OgrePlatform_Export.sln  TestApp_Managed.sln  TestApp_Sharp.sln
trunk/: AUTHORS  CMakeLists.txt  COPYING.MIT  ChangeLog.txt  ChangeLog_rus.txt  Makefile.am  MyGUI.pc.in  MyGUI_v7.sln  MyGUI_v8.sln  Readme.txt  TODO.txt  acinclude.m4  bootstrap  configure.ac  my-gui.workspace
(+11856 files in other folders)
